--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@gsap/react": "^2.1.1",
-    "gsap": "^3.12.5",
+    "framer-motion": "^11.11.11",
     "locomotive-scroll": "^5.0.0-beta.21",
     "next": "14.2.16",
     "react": "^18",
