--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "framer-motion": "^11.11.11",
+    "ics": "^3.8.1",
     "locomotive-scroll": "^5.0.0-beta.21",
     "next": "14.2.16",
     "react": "^18",
