--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@types/tailwindcss": "^3.1.0",
     "framer-motion": "^11.11.11",
     "ics": "^3.8.1",
     "locomotive-scroll": "^5.0.0-beta.21",
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
-    "zustand": "^5.0.0"
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
