--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "next": "14.2.16",
     "react": "^18",
     "react-dom": "^18",
+    "swiper": "^11.1.15",
     "zustand": "^5.0.1"
   },
   "devDependencies": {
